--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "files.associations": {
         "iostream": "cpp",
         "numeric": "cpp",
-        "iosfwd": "cpp"
+        "iosfwd": "cpp",
+        "ratio": "cpp"
     }
 }
