boj-24090 알고리즘 수업 - 퀵 정렬 1

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
         "ratio": "cpp",
         "xutility": "cpp",
         "xiosbase": "cpp",
-        "deque": "cpp"
+        "deque": "cpp",
+        "vector": "cpp"
     }
 }
