boj-20115 에너지 드링크

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -88,6 +88,9 @@
         "xmemory": "cpp",
         "xstring": "cpp",
         "xtr1common": "cpp",
-        "xtree": "cpp"
-    }
+        "xtree": "cpp",
+        "coroutine": "cpp",
+        "resumable": "cpp"
+    },
+    "files.autoGuessEncoding": false
 }
