boj-31216 슈퍼 소수

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -92,5 +92,6 @@
         "coroutine": "cpp",
         "resumable": "cpp"
     },
-    "files.autoGuessEncoding": false
+    "files.autoGuessEncoding": false,
+    "cmake.outputLogEncoding": "utf-8"
 }
